Updates for May (sound credits, FAQ link, iOS link)

--- a/livingworlds/support/index.html
+++ b/livingworlds/support/index.html
@@ -27,7 +27,7 @@
 				
 			<div id="wide-images" class="faq-item">
 				<h3>Why are the images portrait orientation when Joseph's demo is landscape?</h3>
-				<p><a href="http://www.effectgames.com/demos/worlds/">Joseph's demo</a> actually uses modified versions of the original Seize the Day art; Wizards of the Coast and Acclaim Entertainment commissioned updates and expansions to a few of the images for their game <a href="https://www.mobygames.com/game/magic-the-gathering-battlemage">Magic: The Gathering - Battlemage</a>, and those are the images Joseph used. There isn't a complete set of 12 months in that size, however, nor are any of the overlays made for that size. Because of that, and to as faithfully as possible re-create the original Seize the Day worlds, we're using the original graphics.</p>
+				<p><a href="http://www.effectgames.com/demos/worlds/">Joseph's demo</a> actually uses modified versions of the original Seize the Day art; Wizards of the Coast and Acclaim Entertainment commissioned updates and expansions to a few of the images for their game <a href="https://www.mobygames.com/game/magic-the-gathering-battlemage">Magic: The Gathering - Battlemage</a>, and those are the images Joseph used. There isn't a complete set of 12 months in that size, however, nor are any of the overlays made for that size. Because of that, and to as faithfully as possible re-create the original Seize the Day worlds, we're using the original graphics. For more info, see <a href="https://iangilman.medium.com/why-doesnt-the-living-worlds-app-use-the-wide-images-3eba3924d4c9" target="_blank">this blog post</a>.</p>
 			</div>
 				
 			<div id="more-scenes" class="faq-item">
