--- a/livingworlds/index.html
+++ b/livingworlds/index.html
@@ -33,7 +33,7 @@
 				<p>The Android version also works as a live wallpaper (the iOS version does not, due to Apple restrictions).</p>
 				<p>Join us for this 25th anniversary celebration of these unique artworks!</p>
 				<div class="center">
-					<a href="https://itunes.apple.com/us/app/living-worlds-mark-ferrari/id1371140984" target="_blank"><img class="ios" src="/livingworlds/img/apple-store-badge.svg" /></a>
+					<a href="https://apps.apple.com/us/app/living-worlds-mark-ferrari/id1371140984" target="_blank"><img class="ios" src="/livingworlds/img/apple-store-badge.svg" /></a>
 					<a href="https://play.google.com/store/apps/details?id=com.pixfabrik.livingworlds&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1" target="_blank"><img class="android" alt="Get it on Google Play" src="/livingworlds/img/google-play-badge.png"/></a>
 				</div>
 				<br/><br/>
