--- a/livingworlds/credits/index.html
+++ b/livingworlds/credits/index.html
@@ -31,11 +31,13 @@
 			<p><a href="https://freesound.org/people/YleArkisto/sounds/253148/" target="_blank">Babbling Brook</a></p>		
 			<p><a href="https://freesound.org/people/straget/sounds/489073/" target="_blank">Big Waterfall</a></p>
 			<p><a href="https://freesound.org/people/bolkmar/sounds/423804/" target="_blank">Birds</a></p>
+			<p><a href="https://freesound.org/people/Lonofi/sounds/446972/" target="_blank">Cave Ambience</a></p>
 			<p><a href="https://freesound.org/people/JustinAmolsch/sounds/519647/" target="_blank">Chickadee 1</a></p>
 			<p><a href="https://freesound.org/people/micndom/sounds/27387/" target="_blank">Chickadee 2</a></p>
 			<p><a href="https://freesound.org/people/straget/sounds/404687/" target="_blank">Crow 1</a></p>
 			<p><a href="https://freesound.org/people/InspectorJ/sounds/418262/" target="_blank">Crow 2</a></p>
 			<p><a href="https://freesound.org/people/_nuel/sounds/54973/" target="_blank">Crow 3</a></p>
+			<p><a href="https://freesound.org/people/everythingsounds/sounds/199515/" target="_blank">Drips</a></p>
 			<p><a href="https://freesound.org/people/Glen_Hoban/sounds/435928/" target="_blank">Field Sounds</a></p>		
 			<p><a href="https://freesound.org/people/InspectorJ/sounds/399744/" target="_blank">Frogs</a></p>		
 			<p><a href="https://freesound.org/people/Danjocross/sounds/387868/" target="_blank">Frogs 2</a></p>
@@ -44,6 +46,7 @@
 			<p><a href="https://freesound.org/people/Danjocross/sounds/503207/" target="_blank">Night Sounds</a></p>
 			<p><a href="https://freesound.org/people/kyles/sounds/451153/" target="_blank">Rain</a></p>		
 			<p><a href="https://freesound.org/people/nlux/sounds/620497/" target="_blank">Singing</a></p>
+			<p><a href="https://freesound.org/people/InspectorJ/sounds/365919/" target="_blank">Small Waterfall</a></p>
 			<p><a href="https://freesound.org/people/klankbeeld/sounds/178150/" target="_blank">Snow on Umbrella</a></p>
 			<p><a href="https://freesound.org/people/krnd/sounds/90898/" target="_blank">Snowing in Dresden</a></p>
 			<p><a href="https://freesound.org/people/mzimny/sounds/494745/" target="_blank">Squirrel Chirping</a></p>
