July sound credits!

--- a/livingworlds/credits/index.html
+++ b/livingworlds/credits/index.html
@@ -37,9 +37,16 @@
 			<p><a href="https://freesound.org/people/straget/sounds/404687/" target="_blank">Crow 1</a></p>
 			<p><a href="https://freesound.org/people/InspectorJ/sounds/418262/" target="_blank">Crow 2</a></p>
 			<p><a href="https://freesound.org/people/_nuel/sounds/54973/" target="_blank">Crow 3</a></p>
+			<p><a href="https://freesound.org/people/Riabad/sounds/492411/" target="_blank">Desert Night 1</a></p>
+			<p><a href="https://freesound.org/people/kangaroovindaloo/sounds/138288/" target="_blank">Desert Night 2</a></p>
+			<p><a href="https://freesound.org/people/Proxima4/sounds/104320/" target="_blank">Desert Wind 1</a></p>
+			<p><a href="https://freesound.org/people/kyles/sounds/454361/" target="_blank">Desert Wind 2</a></p>
 			<p><a href="https://freesound.org/people/everythingsounds/sounds/199515/" target="_blank">Drips</a></p>
 			<p><a href="https://freesound.org/people/Glen_Hoban/sounds/435928/" target="_blank">Field Sounds</a></p>		
-			<p><a href="https://freesound.org/people/InspectorJ/sounds/399744/" target="_blank">Frogs</a></p>		
+			<p><a href="https://freesound.org/people/derplayer/sounds/587174/" target="_blank">Fireworks 1</a></p>
+			<p><a href="https://freesound.org/people/derplayer/sounds/587183/" target="_blank">Fireworks 2</a></p>
+			<p><a href="https://freesound.org/people/derplayer/sounds/587194/" target="_blank">Fireworks 3</a></p>
+			<p><a href="https://freesound.org/people/InspectorJ/sounds/399744/" target="_blank">Frogs 1</a></p>		
 			<p><a href="https://freesound.org/people/Danjocross/sounds/387868/" target="_blank">Frogs 2</a></p>
 			<p><a href="https://freesound.org/people/craigsmith/sounds/479610/" target="_blank">Hawk 1</a></p> 
 			<p><a href="https://freesound.org/people/1888software/sounds/575524/" target="_blank">Hawk 2</a></p>
@@ -53,7 +60,7 @@
 			<p><a href="https://freesound.org/people/Benboncan/sounds/64544/" target="_blank">Tawny Owls</a></p>
 			<p><a href="https://freesound.org/people/WavJunction.com/sounds/512687/" target="_blank">Waterfall Rumble</a></p>
 			<p><a href="https://freesound.org/people/y89312/sounds/139901/" target="_blank">Wolf</a></p>
-			<p><a href="https://freesound.org/people/reinsamba/sounds/54641/" target="_blank">Wren</a></p>
+			<p><a href="https://freesound.org/people/reinsamba/sounds/54641/" target="_blank">Wren</a></p>			
 			<br>
 			<p>Additional sounds from <a href="https://getsoundly.com/" target="_blank">Soundly</a>.</p>
 		</div>
