--- a/livingworlds/credits/index.html
+++ b/livingworlds/credits/index.html
@@ -31,6 +31,7 @@
 			<p><a href="https://freesound.org/people/YleArkisto/sounds/253148/" target="_blank">Babbling Brook</a></p>		
 			<p><a href="https://freesound.org/people/straget/sounds/489073/" target="_blank">Big Waterfall</a></p>
 			<p><a href="https://freesound.org/people/bolkmar/sounds/423804/" target="_blank">Birds</a></p>
+			<p><a href="https://freesound.org/people/calebrankin/sounds/529383/" target="_blank">Bubbles</a></p>
 			<p><a href="https://freesound.org/people/Lonofi/sounds/446972/" target="_blank">Cave Ambience</a></p>
 			<p><a href="https://freesound.org/people/JustinAmolsch/sounds/519647/" target="_blank">Chickadee 1</a></p>
 			<p><a href="https://freesound.org/people/micndom/sounds/27387/" target="_blank">Chickadee 2</a></p>
@@ -58,9 +59,11 @@
 			<p><a href="https://freesound.org/people/krnd/sounds/90898/" target="_blank">Snowing in Dresden</a></p>
 			<p><a href="https://freesound.org/people/mzimny/sounds/494745/" target="_blank">Squirrel Chirping</a></p>
 			<p><a href="https://freesound.org/people/Benboncan/sounds/64544/" target="_blank">Tawny Owls</a></p>
+			<p><a href="https://freesound.org/people/Fission9/sounds/504641/" target="_blank">Underwater Ambience 1</a></p>
+			<p><a href="https://freesound.org/people/felix.blume/sounds/328306/" target="_blank">Underwater Ambience 2</a></p>
 			<p><a href="https://freesound.org/people/WavJunction.com/sounds/512687/" target="_blank">Waterfall Rumble</a></p>
 			<p><a href="https://freesound.org/people/y89312/sounds/139901/" target="_blank">Wolf</a></p>
-			<p><a href="https://freesound.org/people/reinsamba/sounds/54641/" target="_blank">Wren</a></p>			
+			<p><a href="https://freesound.org/people/reinsamba/sounds/54641/" target="_blank">Wren</a></p>		
 			<br>
 			<p>Additional sounds from <a href="https://getsoundly.com/" target="_blank">Soundly</a>.</p>
 		</div>
