September sound credits

--- a/livingworlds/credits/index.html
+++ b/livingworlds/credits/index.html
@@ -47,12 +47,15 @@
 			<p><a href="https://freesound.org/people/derplayer/sounds/587174/" target="_blank">Fireworks 1</a></p>
 			<p><a href="https://freesound.org/people/derplayer/sounds/587183/" target="_blank">Fireworks 2</a></p>
 			<p><a href="https://freesound.org/people/derplayer/sounds/587194/" target="_blank">Fireworks 3</a></p>
+			<p><a href="https://freesound.org/people/kathol/sounds/37914/" target="_blank">Foghorn</a></p>
 			<p><a href="https://freesound.org/people/InspectorJ/sounds/399744/" target="_blank">Frogs 1</a></p>		
 			<p><a href="https://freesound.org/people/Danjocross/sounds/387868/" target="_blank">Frogs 2</a></p>
 			<p><a href="https://freesound.org/people/craigsmith/sounds/479610/" target="_blank">Hawk 1</a></p> 
 			<p><a href="https://freesound.org/people/1888software/sounds/575524/" target="_blank">Hawk 2</a></p>
 			<p><a href="https://freesound.org/people/Danjocross/sounds/503207/" target="_blank">Night Sounds</a></p>
 			<p><a href="https://freesound.org/people/kyles/sounds/451153/" target="_blank">Rain</a></p>		
+			<p><a href="https://freesound.org/people/Lydmakeren/sounds/510917/" target="_blank">Seagulls 1</a></p>
+			<p><a href="https://freesound.org/people/squashy555/sounds/353416/" target="_blank">Seagulls 2</a></p>
 			<p><a href="https://freesound.org/people/nlux/sounds/620497/" target="_blank">Singing</a></p>
 			<p><a href="https://freesound.org/people/InspectorJ/sounds/365919/" target="_blank">Small Waterfall</a></p>
 			<p><a href="https://freesound.org/people/klankbeeld/sounds/178150/" target="_blank">Snow on Umbrella</a></p>
