--- a/livingworlds/credits/index.html
+++ b/livingworlds/credits/index.html
@@ -29,6 +29,7 @@
 			<p>Weather Sequencing by <a href="http://www.fregger.com/" target="_blank">Brad Fregger</a>, <a href="https://twitter.com/jhuckaby" target="_blank">Joseph Huckaby</a> &amp; Ted Williams</p>
 			<h2>Sounds</h2>
 			<p><a href="https://freesound.org/people/YleArkisto/sounds/253148/" target="_blank">Babbling Brook</a></p>		
+			<p><a href="https://freesound.org/people/Gammelsmurfen778/sounds/546823/" target="_blank">Bats</a></p>
 			<p><a href="https://freesound.org/people/straget/sounds/489073/" target="_blank">Big Waterfall</a></p>
 			<p><a href="https://freesound.org/people/bolkmar/sounds/423804/" target="_blank">Birds</a></p>
 			<p><a href="https://freesound.org/people/calebrankin/sounds/529383/" target="_blank">Bubbles</a></p>
@@ -54,6 +55,7 @@
 			<p><a href="https://freesound.org/people/1888software/sounds/575524/" target="_blank">Hawk 2</a></p>
 			<p><a href="https://freesound.org/people/Danjocross/sounds/503207/" target="_blank">Night Sounds</a></p>
 			<p><a href="https://freesound.org/people/kyles/sounds/451153/" target="_blank">Rain</a></p>		
+			<p><a href="https://freesound.org/people/Yin_Yang_Jake007/sounds/415203/" target="_blank">Scurrying</a></p>
 			<p><a href="https://freesound.org/people/Lydmakeren/sounds/510917/" target="_blank">Seagulls 1</a></p>
 			<p><a href="https://freesound.org/people/squashy555/sounds/353416/" target="_blank">Seagulls 2</a></p>
 			<p><a href="https://freesound.org/people/nlux/sounds/620497/" target="_blank">Singing</a></p>
@@ -65,7 +67,8 @@
 			<p><a href="https://freesound.org/people/Fission9/sounds/504641/" target="_blank">Underwater Ambience 1</a></p>
 			<p><a href="https://freesound.org/people/felix.blume/sounds/328306/" target="_blank">Underwater Ambience 2</a></p>
 			<p><a href="https://freesound.org/people/WavJunction.com/sounds/512687/" target="_blank">Waterfall Rumble</a></p>
-			<p><a href="https://freesound.org/people/y89312/sounds/139901/" target="_blank">Wolf</a></p>
+			<p><a href="https://freesound.org/people/y89312/sounds/139901/" target="_blank">Wolf 1</a></p>
+			<p><a href="https://freesound.org/people/viorelvio/sounds/66258/" target="_blank">Wolf 2</a></p>
 			<p><a href="https://freesound.org/people/reinsamba/sounds/54641/" target="_blank">Wren</a></p>		
 			<br>
 			<p>Additional sounds from <a href="https://getsoundly.com/" target="_blank">Soundly</a>.</p>
