--- a/livingworlds/credits/index.html
+++ b/livingworlds/credits/index.html
@@ -31,7 +31,8 @@
 			<p><a href="https://freesound.org/people/YleArkisto/sounds/253148/" target="_blank">Babbling Brook</a></p>		
 			<p><a href="https://freesound.org/people/Gammelsmurfen778/sounds/546823/" target="_blank">Bats</a></p>
 			<p><a href="https://freesound.org/people/straget/sounds/489073/" target="_blank">Big Waterfall</a></p>
-			<p><a href="https://freesound.org/people/bolkmar/sounds/423804/" target="_blank">Birds</a></p>
+			<p><a href="https://freesound.org/people/bolkmar/sounds/423804/" target="_blank">Birds 1</a></p>
+			<p><a href="https://freesound.org/people/Julien%20Nicolas/sounds/234895/" target="_blank">Birds 2</a></p>
 			<p><a href="https://freesound.org/people/calebrankin/sounds/529383/" target="_blank">Bubbles</a></p>
 			<p><a href="https://freesound.org/people/Lonofi/sounds/446972/" target="_blank">Cave Ambience</a></p>
 			<p><a href="https://freesound.org/people/JustinAmolsch/sounds/519647/" target="_blank">Chickadee 1</a></p>
@@ -51,8 +52,11 @@
 			<p><a href="https://freesound.org/people/kathol/sounds/37914/" target="_blank">Foghorn</a></p>
 			<p><a href="https://freesound.org/people/InspectorJ/sounds/399744/" target="_blank">Frogs 1</a></p>		
 			<p><a href="https://freesound.org/people/Danjocross/sounds/387868/" target="_blank">Frogs 2</a></p>
+			<p><a href="https://freesound.org/people/madbob69/sounds/265107/" target="_blank">Frogs 3</a></p>
 			<p><a href="https://freesound.org/people/craigsmith/sounds/479610/" target="_blank">Hawk 1</a></p> 
 			<p><a href="https://freesound.org/people/1888software/sounds/575524/" target="_blank">Hawk 2</a></p>
+			<p><a href="https://freesound.org/people/TheFlyFishingFilmmaker/sounds/614299/" target="_blank">Lake Waves 1</a></p>
+			<p><a href="https://freesound.org/people/TRP/sounds/568819/" target="_blank">Lake Waves 2</a></p>
 			<p><a href="https://freesound.org/people/Danjocross/sounds/503207/" target="_blank">Night Sounds</a></p>
 			<p><a href="https://freesound.org/people/kyles/sounds/451153/" target="_blank">Rain</a></p>		
 			<p><a href="https://freesound.org/people/Yin_Yang_Jake007/sounds/415203/" target="_blank">Scurrying</a></p>
