Sound credits styling

--- a/livingworlds/credits/index.html
+++ b/livingworlds/credits/index.html
@@ -20,6 +20,7 @@
 			<p><a href="https://lizdominguez.github.io/" target="_blank">Liz Dominguez</a></p>
 			<p><a href="https://github.com/MaxwellTG" target="_blank">Maxwell Graham</a></p>
 			<p><a href="https://seancswanson.com/" target="_blank">Sean Swanson</a></p>
+			<p>Maxwell Wilson</p>
 			<p><a href="http://eveworthington.com/" target="_blank">Eve Worthington</a></p>
 			<h2>Based on Scenes from <em>Seize the Day</em> (1993)</h2>
 			<p>Produced by <a href="http://www.fregger.com/" target="_blank">Brad Fregger</a></p>
@@ -28,52 +29,54 @@
 			<p>Programmed by <a href="https://iangilman.com/" target="_blank">Ian Gilman</a>, Michael Sandige, Sofie Vastano, Jack Bringloe, Steve Mariotti &amp; David Stafford</p>
 			<p>Weather Sequencing by <a href="http://www.fregger.com/" target="_blank">Brad Fregger</a>, <a href="https://twitter.com/jhuckaby" target="_blank">Joseph Huckaby</a> &amp; Ted Williams</p>
 			<h2>Sounds</h2>
-			<p><a href="https://freesound.org/people/YleArkisto/sounds/253148/" target="_blank">Babbling Brook</a></p>		
-			<p><a href="https://freesound.org/people/Gammelsmurfen778/sounds/546823/" target="_blank">Bats</a></p>
-			<p><a href="https://freesound.org/people/straget/sounds/489073/" target="_blank">Big Waterfall</a></p>
-			<p><a href="https://freesound.org/people/bolkmar/sounds/423804/" target="_blank">Birds 1</a></p>
-			<p><a href="https://freesound.org/people/Julien%20Nicolas/sounds/234895/" target="_blank">Birds 2</a></p>
-			<p><a href="https://freesound.org/people/calebrankin/sounds/529383/" target="_blank">Bubbles</a></p>
-			<p><a href="https://freesound.org/people/Lonofi/sounds/446972/" target="_blank">Cave Ambience</a></p>
-			<p><a href="https://freesound.org/people/JustinAmolsch/sounds/519647/" target="_blank">Chickadee 1</a></p>
-			<p><a href="https://freesound.org/people/micndom/sounds/27387/" target="_blank">Chickadee 2</a></p>
-			<p><a href="https://freesound.org/people/straget/sounds/404687/" target="_blank">Crow 1</a></p>
-			<p><a href="https://freesound.org/people/InspectorJ/sounds/418262/" target="_blank">Crow 2</a></p>
-			<p><a href="https://freesound.org/people/_nuel/sounds/54973/" target="_blank">Crow 3</a></p>
-			<p><a href="https://freesound.org/people/Riabad/sounds/492411/" target="_blank">Desert Night 1</a></p>
-			<p><a href="https://freesound.org/people/kangaroovindaloo/sounds/138288/" target="_blank">Desert Night 2</a></p>
-			<p><a href="https://freesound.org/people/Proxima4/sounds/104320/" target="_blank">Desert Wind 1</a></p>
-			<p><a href="https://freesound.org/people/kyles/sounds/454361/" target="_blank">Desert Wind 2</a></p>
-			<p><a href="https://freesound.org/people/everythingsounds/sounds/199515/" target="_blank">Drips</a></p>
-			<p><a href="https://freesound.org/people/Glen_Hoban/sounds/435928/" target="_blank">Field Sounds</a></p>		
-			<p><a href="https://freesound.org/people/derplayer/sounds/587174/" target="_blank">Fireworks 1</a></p>
-			<p><a href="https://freesound.org/people/derplayer/sounds/587183/" target="_blank">Fireworks 2</a></p>
-			<p><a href="https://freesound.org/people/derplayer/sounds/587194/" target="_blank">Fireworks 3</a></p>
-			<p><a href="https://freesound.org/people/kathol/sounds/37914/" target="_blank">Foghorn</a></p>
-			<p><a href="https://freesound.org/people/InspectorJ/sounds/399744/" target="_blank">Frogs 1</a></p>		
-			<p><a href="https://freesound.org/people/Danjocross/sounds/387868/" target="_blank">Frogs 2</a></p>
-			<p><a href="https://freesound.org/people/madbob69/sounds/265107/" target="_blank">Frogs 3</a></p>
-			<p><a href="https://freesound.org/people/craigsmith/sounds/479610/" target="_blank">Hawk 1</a></p> 
-			<p><a href="https://freesound.org/people/1888software/sounds/575524/" target="_blank">Hawk 2</a></p>
-			<p><a href="https://freesound.org/people/TheFlyFishingFilmmaker/sounds/614299/" target="_blank">Lake Waves 1</a></p>
-			<p><a href="https://freesound.org/people/TRP/sounds/568819/" target="_blank">Lake Waves 2</a></p>
-			<p><a href="https://freesound.org/people/Danjocross/sounds/503207/" target="_blank">Night Sounds</a></p>
-			<p><a href="https://freesound.org/people/kyles/sounds/451153/" target="_blank">Rain</a></p>		
-			<p><a href="https://freesound.org/people/Yin_Yang_Jake007/sounds/415203/" target="_blank">Scurrying</a></p>
-			<p><a href="https://freesound.org/people/Lydmakeren/sounds/510917/" target="_blank">Seagulls 1</a></p>
-			<p><a href="https://freesound.org/people/squashy555/sounds/353416/" target="_blank">Seagulls 2</a></p>
-			<p><a href="https://freesound.org/people/nlux/sounds/620497/" target="_blank">Singing</a></p>
-			<p><a href="https://freesound.org/people/InspectorJ/sounds/365919/" target="_blank">Small Waterfall</a></p>
-			<p><a href="https://freesound.org/people/klankbeeld/sounds/178150/" target="_blank">Snow on Umbrella</a></p>
-			<p><a href="https://freesound.org/people/krnd/sounds/90898/" target="_blank">Snowing in Dresden</a></p>
-			<p><a href="https://freesound.org/people/mzimny/sounds/494745/" target="_blank">Squirrel Chirping</a></p>
-			<p><a href="https://freesound.org/people/Benboncan/sounds/64544/" target="_blank">Tawny Owls</a></p>
-			<p><a href="https://freesound.org/people/Fission9/sounds/504641/" target="_blank">Underwater Ambience 1</a></p>
-			<p><a href="https://freesound.org/people/felix.blume/sounds/328306/" target="_blank">Underwater Ambience 2</a></p>
-			<p><a href="https://freesound.org/people/WavJunction.com/sounds/512687/" target="_blank">Waterfall Rumble</a></p>
-			<p><a href="https://freesound.org/people/y89312/sounds/139901/" target="_blank">Wolf 1</a></p>
-			<p><a href="https://freesound.org/people/viorelvio/sounds/66258/" target="_blank">Wolf 2</a></p>
-			<p><a href="https://freesound.org/people/reinsamba/sounds/54641/" target="_blank">Wren</a></p>		
+			<div class="sound-credits">
+				<p><a href="https://freesound.org/people/YleArkisto/sounds/253148/" target="_blank">Babbling Brook</a></p>		
+				<p><a href="https://freesound.org/people/Gammelsmurfen778/sounds/546823/" target="_blank">Bats</a></p>
+				<p><a href="https://freesound.org/people/straget/sounds/489073/" target="_blank">Big Waterfall</a></p>
+				<p><a href="https://freesound.org/people/bolkmar/sounds/423804/" target="_blank">Birds 1</a></p>
+				<p><a href="https://freesound.org/people/Julien%20Nicolas/sounds/234895/" target="_blank">Birds 2</a></p>
+				<p><a href="https://freesound.org/people/calebrankin/sounds/529383/" target="_blank">Bubbles</a></p>
+				<p><a href="https://freesound.org/people/Lonofi/sounds/446972/" target="_blank">Cave Ambience</a></p>
+				<p><a href="https://freesound.org/people/JustinAmolsch/sounds/519647/" target="_blank">Chickadee 1</a></p>
+				<p><a href="https://freesound.org/people/micndom/sounds/27387/" target="_blank">Chickadee 2</a></p>
+				<p><a href="https://freesound.org/people/straget/sounds/404687/" target="_blank">Crow 1</a></p>
+				<p><a href="https://freesound.org/people/InspectorJ/sounds/418262/" target="_blank">Crow 2</a></p>
+				<p><a href="https://freesound.org/people/_nuel/sounds/54973/" target="_blank">Crow 3</a></p>
+				<p><a href="https://freesound.org/people/Riabad/sounds/492411/" target="_blank">Desert Night 1</a></p>
+				<p><a href="https://freesound.org/people/kangaroovindaloo/sounds/138288/" target="_blank">Desert Night 2</a></p>
+				<p><a href="https://freesound.org/people/Proxima4/sounds/104320/" target="_blank">Desert Wind 1</a></p>
+				<p><a href="https://freesound.org/people/kyles/sounds/454361/" target="_blank">Desert Wind 2</a></p>
+				<p><a href="https://freesound.org/people/everythingsounds/sounds/199515/" target="_blank">Drips</a></p>
+				<p><a href="https://freesound.org/people/Glen_Hoban/sounds/435928/" target="_blank">Field Sounds</a></p>		
+				<p><a href="https://freesound.org/people/derplayer/sounds/587174/" target="_blank">Fireworks 1</a></p>
+				<p><a href="https://freesound.org/people/derplayer/sounds/587183/" target="_blank">Fireworks 2</a></p>
+				<p><a href="https://freesound.org/people/derplayer/sounds/587194/" target="_blank">Fireworks 3</a></p>
+				<p><a href="https://freesound.org/people/kathol/sounds/37914/" target="_blank">Foghorn</a></p>
+				<p><a href="https://freesound.org/people/InspectorJ/sounds/399744/" target="_blank">Frogs 1</a></p>		
+				<p><a href="https://freesound.org/people/Danjocross/sounds/387868/" target="_blank">Frogs 2</a></p>
+				<p><a href="https://freesound.org/people/madbob69/sounds/265107/" target="_blank">Frogs 3</a></p>
+				<p><a href="https://freesound.org/people/craigsmith/sounds/479610/" target="_blank">Hawk 1</a></p> 
+				<p><a href="https://freesound.org/people/1888software/sounds/575524/" target="_blank">Hawk 2</a></p>
+				<p><a href="https://freesound.org/people/TheFlyFishingFilmmaker/sounds/614299/" target="_blank">Lake Waves 1</a></p>
+				<p><a href="https://freesound.org/people/TRP/sounds/568819/" target="_blank">Lake Waves 2</a></p>
+				<p><a href="https://freesound.org/people/Danjocross/sounds/503207/" target="_blank">Night Sounds</a></p>
+				<p><a href="https://freesound.org/people/kyles/sounds/451153/" target="_blank">Rain</a></p>		
+				<p><a href="https://freesound.org/people/Yin_Yang_Jake007/sounds/415203/" target="_blank">Scurrying</a></p>
+				<p><a href="https://freesound.org/people/Lydmakeren/sounds/510917/" target="_blank">Seagulls 1</a></p>
+				<p><a href="https://freesound.org/people/squashy555/sounds/353416/" target="_blank">Seagulls 2</a></p>
+				<p><a href="https://freesound.org/people/nlux/sounds/620497/" target="_blank">Singing</a></p>
+				<p><a href="https://freesound.org/people/InspectorJ/sounds/365919/" target="_blank">Small Waterfall</a></p>
+				<p><a href="https://freesound.org/people/klankbeeld/sounds/178150/" target="_blank">Snow on Umbrella</a></p>
+				<p><a href="https://freesound.org/people/krnd/sounds/90898/" target="_blank">Snowing in Dresden</a></p>
+				<p><a href="https://freesound.org/people/mzimny/sounds/494745/" target="_blank">Squirrel Chirping</a></p>
+				<p><a href="https://freesound.org/people/Benboncan/sounds/64544/" target="_blank">Tawny Owls</a></p>
+				<p><a href="https://freesound.org/people/Fission9/sounds/504641/" target="_blank">Underwater Ambience 1</a></p>
+				<p><a href="https://freesound.org/people/felix.blume/sounds/328306/" target="_blank">Underwater Ambience 2</a></p>
+				<p><a href="https://freesound.org/people/WavJunction.com/sounds/512687/" target="_blank">Waterfall Rumble</a></p>
+				<p><a href="https://freesound.org/people/y89312/sounds/139901/" target="_blank">Wolf 1</a></p>
+				<p><a href="https://freesound.org/people/viorelvio/sounds/66258/" target="_blank">Wolf 2</a></p>
+				<p><a href="https://freesound.org/people/reinsamba/sounds/54641/" target="_blank">Wren</a></p>	
+			</div>
 			<br>
 			<p>Additional sounds from <a href="https://getsoundly.com/" target="_blank">Soundly</a>.</p>
 		</div>
