--- a/index.html
+++ b/index.html
@@ -1,52 +1,84 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html>
-<head>
-  <title>Pixfabrik</title>
-  <meta name="description" content="We make nice things." />
-  <meta name="keywords" content="web development" />
-  <meta name="author" content="Pixfabrik, LLC" />
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/3.0.0/build/cssreset/reset-min.css">
-	<link rel="stylesheet" type="text/css" href="main.css">
-</head>
-<body>
-  <div id="main">
-    <p class="center margin">We make nice things.</p>
-    <div class="things">
-      <div class="thing">
-        <p><a href="/livingworlds/">Living Worlds</a>:</p>
-        <p><a href="/livingworlds/"><img class="icon" src="img/livingworlds.jpg"></a></p>
+  <head>
+    <title>Pixfabrik</title>
+    <meta name="description" content="We make nice things." />
+    <meta name="keywords" content="web development" />
+    <meta name="author" content="Pixfabrik, LLC" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="http://yui.yahooapis.com/3.0.0/build/cssreset/reset-min.css"
+    />
+    <link rel="stylesheet" type="text/css" href="main.css" />
+  </head>
+  <body>
+    <div id="main">
+      <p class="center margin">We make nice things.</p>
+      <div class="things">
+        <div class="thing">
+          <p><a href="/livingworlds/">Living Worlds</a>:</p>
+          <p>
+            <a href="/livingworlds/"
+              ><img class="icon" src="img/livingworlds.jpg"
+            /></a>
+          </p>
+        </div>
+        <div class="thing">
+          <p><a href="http://www.artywidget.com">Arty Widget</a>:</p>
+          <p>
+            <a href="http://www.artywidget.com"
+              ><img class="icon" src="img/artywidget.jpg"
+            /></a>
+          </p>
+        </div>
+        <div class="thing">
+          <p><a href="http://www.letsfathom.com">Fathom</a>:</p>
+          <p>
+            <a href="http://www.letsfathom.com"
+              ><img class="icon" src="img/fathom.jpg"
+            /></a>
+          </p>
+        </div>
+        <div class="thing">
+          <p><a href="http://www.driftory.com">Driftory</a>:</p>
+          <p>
+            <a href="http://www.driftory.com"
+              ><img class="icon" src="img/driftory.png"
+            /></a>
+          </p>
+        </div>
       </div>
-      <div class="thing">
-        <p><a href="http://www.artywidget.com">Arty Widget</a>:</p>
-        <p><a href="http://www.artywidget.com"><img class="icon" src="img/artywidget.jpg"></a></p>
-      </div>
-      <div class="thing">
-        <p><a href="http://www.letsfathom.com">Fathom</a>:</p>
-        <p><a href="http://www.letsfathom.com"><img class="icon" src="img/fathom.jpg"></a></p>
-      </div>
-      <div class="thing">
-        <p><a href="http://www.driftory.com">Driftory</a>:</p>
-        <p><a href="http://www.driftory.com"><img class="icon" src="img/driftory.png"></a></p>
-      </div>
+      <p class="center margin">
+        Contact: <a href="mailto:ian@pixfabrik.com">ian@pixfabrik.com</a>
+      </p>
     </div>
-    <p class="center margin">Contact: <a href="mailto:ian@pixfabrik.com">ian@pixfabrik.com</a></p>
-  </div>
-  <div id="footer">Copyright 2011-2022, Pixfabrik, LLC&nbsp;&nbsp;&#149;&nbsp;&nbsp;<a href="http://www.flickr.com/photos/amagill/3268315787/">Machine</a> image by Andrew Magill</div>
-  <script type="text/javascript">
-  
-    // Google Analytics Start
-    var _gaq = _gaq || [];
-    _gaq.push(['_setAccount', 'UA-23359564-2']);
-    _gaq.push(['_trackPageview']);
-    
-    (function() {
-      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-      ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-    })();
-    // Google Analytics End
-  
-  </script>
-</body>
+    <div id="footer">
+      Copyright 2011-2023, Pixfabrik, LLC&nbsp;&nbsp;&#149;&nbsp;&nbsp;<a
+        href="http://www.flickr.com/photos/amagill/3268315787/"
+        >Machine</a
+      >
+      image by Andrew Magill
+    </div>
+    <script type="text/javascript">
+      // Google Analytics Start
+      var _gaq = _gaq || [];
+      _gaq.push(["_setAccount", "UA-23359564-2"]);
+      _gaq.push(["_trackPageview"]);
+
+      (function () {
+        var ga = document.createElement("script");
+        ga.type = "text/javascript";
+        ga.async = true;
+        ga.src =
+          ("https:" == document.location.protocol
+            ? "https://ssl"
+            : "http://www") + ".google-analytics.com/ga.js";
+        var s = document.getElementsByTagName("script")[0];
+        s.parentNode.insertBefore(ga, s);
+      })();
+      // Google Analytics End
+    </script>
+  </body>
 </html>
